monitoring/grafana/3.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        securityContext:
          privileged: true
          runAsUser: 0
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 3
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: grafana
          mountPath: /var/lib/grafana
          subPath: grafana/data
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: ""
      - name: grafana
        persistentVolumeClaim:
          claimName: grafana
