monitoring/grafana/5.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:8.4.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        securityContext:
          privileged: true
          runAsUser: 0
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 3
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: grafana
          mountPath: /var/lib/grafana
          subPath: grafana/data
        - name: grafana
          mountPath: /etc/grafana/provisioning
          subPath: grafana/provisioning
        - name: grafana
          mountPath: /var/log/grafana
          subPath: grafana/logs
        - name: grafana-config
          mountPath: /etc/grafana/grafana.ini
          subPath: grafana.ini
        - name: grafana-config
          mountPath: /etc/grafana/ldap.toml
          subPath: ldap.toml
      - name: render
        image: grafana/grafana-image-renderer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          name: render
          protocol: TCP
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8081
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8081
          timeoutSeconds: 3
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: ""
      - name: grafana
        persistentVolumeClaim:
          claimName: grafana
      - name: grafana-config
        configMap:
          name: grafana-config
          items:
            - key: grafana.ini
              path: grafana.ini
            - key: ldap.toml
              path: ldap.toml
