monitoring/grafana/3.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  sessionAffinity: ClientIP
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: render
      protocol: TCP
      port: 8081
      targetPort: 8081
